--- a/themes/gymfinity/styles/public.scss
+++ b/themes/gymfinity/styles/public.scss
@@ -11,6 +11,7 @@
 @import 'modules/appbar';
 @import 'modules/masthead';
 @import 'modules/sidebar';
+@import 'modules/footer';
 
 address.inline {
 	display: inline;
