--- a/themes/gymfinity/styles/mpress/components/_offcanvas.scss
+++ b/themes/gymfinity/styles/mpress/components/_offcanvas.scss
@@ -28,6 +28,7 @@ body.offcanvas-open, body.offcanvas-opening {
     transform: translate3d( 0, 100%, 0 );
     transition: transform .3s ease-in-out;
     background: #fff;
+    padding: $gutter;
     &.open, &.opening, &.closing {
         visibility: visible;
     }
