--- a/themes/gymfinity/styles/modules/_footer.scss
+++ b/themes/gymfinity/styles/modules/_footer.scss
@@ -5,4 +5,18 @@
 	li {
 		display: inline-block;
 	}
+
+	.custom-logo-link{
+		max-width: 200px;
+	}
+
+	.outter-widget{
+		margin-top: 50px;
+	}
+
+	.site-info {
+    	margin-top: 40px;
+	}
 }
+
+
