Commiting JS in order to pull other changes

--- a/themes/gymfinity/styles/mpress/_public.scss
+++ b/themes/gymfinity/styles/mpress/_public.scss
@@ -39,7 +39,7 @@ html {
 }
 body {
     position: relative;
-    font: normal normal normal 1rem/1.618em $sans;
+    font: normal normal normal 1rem/1.618 $sans;
     width: 100%;
     color: $font-color;
     overflow: hidden;
