Changed up the sidebar navigation

--- a/themes/gymfinity/styles/public.scss
+++ b/themes/gymfinity/styles/public.scss
@@ -10,6 +10,7 @@
 @import 'mpress/public';
 @import 'vendors/datatables';
 @import 'modules/appbar';
+@import 'modules/buttons';
 @import 'modules/masthead';
 @import 'modules/sidebar';
 @import 'modules/footer';
