Changed primary color in variables instead of hardcoding

--- a/themes/gymfinity/styles/modules/_content.scss
+++ b/themes/gymfinity/styles/modules/_content.scss
@@ -94,16 +94,16 @@ table.openings {
 	padding: 20px 0
 }
 
-.button {
-	margin: 0 20px;
-	width: 200px;
-    padding: 5px 0;
-    background:#ed2024;
-    color:#fff;
-    border:none;
+// .button {
+// 	margin: 0 20px;
+// 	width: 200px;
+//     padding: 5px 0;
+//     background:#ed2024;
+//     color:#fff;
+//     border:none;
 
-    &:hover{
-    	background:darken(#ed2024, 10%);
-    	color:white;
-    }
-}
+//     &:hover{
+//     	background:darken(#ed2024, 10%);
+//     	color:white;
+//     }
+// }
