changed primary color

--- a/themes/gymfinity/styles/modules/_variables.scss
+++ b/themes/gymfinity/styles/modules/_variables.scss
@@ -11,7 +11,7 @@
 /*------------------------------------------------------------------------------
  * Color
  * -------------------------------------------------------------------------- */
-// $primary-color    : #0274BE;
+   $primary-color    : #ed2024;
 // $secondary-color  : #FAFAFA;
 // $font-color       : #232323;
 // $light-font-color : lighten( $font-color, 40% );
