--- a/themes/gymfinity/styles/modules/_footer.scss
+++ b/themes/gymfinity/styles/modules/_footer.scss
@@ -12,6 +12,7 @@
 	}
 
 	ul.social{
+		margin-bottom: 0;
 		li.facebook{
 			a, a:link{
 
@@ -50,8 +51,11 @@
 		max-width: 200px;
 	}
 
-	.outter-widget{
-		margin-top: 50px;
+	.margin-widget{
+		margin-top: 10px;
+		@include breakpoint( 'lg' ) {
+			margin-bottom: 20px;
+		}
 	}
 
 	.site-info {
