Added event view

--- a/themes/gymfinity/styles/public.scss
+++ b/themes/gymfinity/styles/public.scss
@@ -15,6 +15,7 @@
 @import 'modules/sidebar';
 @import 'modules/footer';
 @import 'modules/content';
+@import 'modules/blog';
 
 address.inline {
 	display: inline;
