--- a/themes/gymfinity/styles/modules/_sidebar.scss
+++ b/themes/gymfinity/styles/modules/_sidebar.scss
@@ -3,4 +3,15 @@
 	@include breakpoint( $menu-breakpoint ) {
 		display: block;
 	}
+	ul {
+		margin: 0;
+		padding: 0;
+		a, a:link {
+			padding: $gutter;
+			margin: 0 ( 0 - $gutter );
+			&:hover, &:focus {
+				background-color: $border-color;
+			}
+		}
+	}
 }
