--- a/themes/gymfinity/styles/modules/_variables.scss
+++ b/themes/gymfinity/styles/modules/_variables.scss
@@ -63,3 +63,6 @@ $menu-breakpoint : 'sm';
 // $button-color : $font-color;
 // $button-border-color: $button-background-color;
 // $button-border: 1px solid $button-border-color;
+
+$box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+$hover-box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
