--- a/themes/gymfinity/styles/public.scss
+++ b/themes/gymfinity/styles/public.scss
@@ -16,6 +16,7 @@
 @import 'modules/footer';
 @import 'modules/content';
 @import 'modules/blog';
+@import 'modules/typography';
 
 address.inline {
 	display: inline;
