--- a/themes/gymfinity/styles/modules/_variables.scss
+++ b/themes/gymfinity/styles/modules/_variables.scss
@@ -11,7 +11,8 @@
 /*------------------------------------------------------------------------------
  * Color
  * -------------------------------------------------------------------------- */
-   $primary-color    : #ed2024;
+   $primary-color    : #e1313a;
+   
 // $secondary-color  : #FAFAFA;
 // $font-color       : #232323;
 // $light-font-color : lighten( $font-color, 40% );
