--- a/themes/gymfinity/styles/modules/_variables.scss
+++ b/themes/gymfinity/styles/modules/_variables.scss
@@ -12,8 +12,9 @@
  * Color
  * -------------------------------------------------------------------------- */
    $primary-color    : #e1313a;
-   
-// $secondary-color  : #FAFAFA;
+
+   $secondary-color  : #efefef;
+   $greyDark		 : #424242;
 // $font-color       : #232323;
 // $light-font-color : lighten( $font-color, 40% );
 // $link-color       : $primary-color;
