button and section styles

--- a/themes/gymfinity/styles/modules/_buttons.scss
+++ b/themes/gymfinity/styles/modules/_buttons.scss
@@ -4,3 +4,33 @@
 		transform: rotate( 180deg );
 	}
 }
+
+.button{
+	background:$primary-color;
+	border:none;
+	color:white;
+	padding: 5px 1.618em;
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	border-radius:2px;
+	margin-bottom:15px;
+
+	&:hover, &:focus{
+		background:$redDark;
+		color:white;
+	}
+
+	&:active{
+		box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+	}
+}
+
+#download-app-cta{
+	.button {
+		background:$greyDark;
+		
+		&:hover, &:focus{
+			background: darken($greyDark, 10%);
+		}
+
+	}
+}
