--- a/themes/gymfinity/styles/modules/_variables.scss
+++ b/themes/gymfinity/styles/modules/_variables.scss
@@ -14,6 +14,7 @@
    $primary-color    : #e1313a;
 
    $secondary-color  : #efefef;
+   $redDark			 : #b5121b;
    $greyDark		 : #424242;
 // $font-color       : #232323;
 // $light-font-color : lighten( $font-color, 40% );
