--- a/themes/gymfinity/styles/modules/_buttons.scss
+++ b/themes/gymfinity/styles/modules/_buttons.scss
@@ -26,8 +26,9 @@
 
 #download-app-cta{
 	.button {
+		margin: 0 10px;
 		background:$greyDark;
-		
+
 		&:hover, &:focus{
 			background: darken($greyDark, 10%);
 		}
