--- a/themes/gymfinity/styles/modules/_content.scss
+++ b/themes/gymfinity/styles/modules/_content.scss
@@ -32,21 +32,6 @@ section.content-block {
 	}
 }
 
-#menu-block{
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-
-    ul {
-    	margin-bottom: 0;
-    }
-}
-
-
-#events-and-testimonials{
-	background:$secondary-color;
-}
-
 
 table.openings {
 	// table-layout: fixed;
@@ -110,29 +95,38 @@ table.openings {
 	overflow-x: auto;
 }
 
+#menu-block{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 
-.card {
-  background: #fff;
-  border-radius: 2px;
-  display: inline-block;
-  height: 100px;
-  margin: 1rem;
-  position: relative;
-  width: 100px;
-  border-radius: 50%;
-  background:#ed2024;
+    ul {
+    	margin-bottom: 0;
+    }
 }
 
-.card-1 {
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+
+#events-and-testimonials{
+	background:$secondary-color;
+	padding: 100px 0;
+
+	.card {
+		background:white;
+		box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+		padding:10px;
+	}
+
+	h2{
+		text-align: center;
+	}
 }
 
-.card-1:hover {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-}
 
 #about-us {
+	padding: 100px 0;
+}
+
+#open-gym{
 	padding: 100px 0;
 }
 
