--- a/themes/gymfinity/styles/modules/_variables.scss
+++ b/themes/gymfinity/styles/modules/_variables.scss
@@ -2,7 +2,8 @@
  * Typography
  * -------------------------------------------------------------------------- */
 // $serif            : Georgia, 'Times New Roman', Times, serif;
-// $sans             : 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+// $sans             : Roboto, 'Open Sans', Helvetica, Arial, sans-serif;
+$sans             : 'Open Sans', Helvetica, Arial, sans-serif;
 // $mono             : 'Courier', monospace;
 // $font-size        : 1rem;
 // $small-font-size  : .85em;
@@ -16,7 +17,7 @@
    $secondary-color  : #efefef;
    $redDark			 : #b5121b;
    $greyDark		 : #424242;
-// $font-color       : #232323;
+$font-color       : #646464;
 // $light-font-color : lighten( $font-color, 40% );
 // $link-color       : $primary-color;
 // $link-focus       : darken($link-color, 10%);
