--- a/themes/gymfinity/styles/public.scss
+++ b/themes/gymfinity/styles/public.scss
@@ -18,6 +18,11 @@
 @import 'modules/blog';
 @import 'modules/typography';
 
+body {
+	// font-weight: 300;
+	background: $secondary-color;
+}
+
 
 address.inline {
 	display: inline;
@@ -38,10 +43,12 @@ address.inline {
 	}
 }
 
-.box-container {
+.box-container, #primary .widget {
 	padding: $gutter;
 	box-shadow: $box-shadow;
 	margin-bottom: $gutter * 2;
+	border-top: 3px solid $primary-color;
+	background: #fff;
 }
 .nav-links {
 	@include clearfix;
