Added some typegraphy styles for the homepage

--- a/themes/gymfinity/styles/mpress/components/_embeds.scss
+++ b/themes/gymfinity/styles/mpress/components/_embeds.scss
@@ -13,6 +13,7 @@
 
 .aligncenter {
     margin: 0 auto $spacing;
+    display: block;
 }
 @each $name, $size in $breakpoints {
     @media ( min-width: #{$size} ) {
