--- a/themes/gymfinity/styles/modules/_content.scss
+++ b/themes/gymfinity/styles/modules/_content.scss
@@ -134,3 +134,7 @@ table.openings {
 //     	color:white;
 //     }
 // }
+
+img[class*='wp-image'] {
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
