--- a/themes/gymfinity/styles/modules/_footer.scss
+++ b/themes/gymfinity/styles/modules/_footer.scss
@@ -17,6 +17,26 @@
 	    padding: 5px;
 	}
 
+	.widgets-left{
+		margin-top: 20px;
+		text-align: center;
+
+		@include breakpoint( 'sm' ){
+			text-align: left;
+		}
+
+		p{
+			color:white;
+		}
+
+		a{
+			color:white;
+			&:hover, &:focus{
+				color:$primary-color;
+			}
+		}
+	}
+
 	ul.social{
 		margin-bottom: 0;
 		li.facebook{
@@ -66,6 +86,7 @@
 
 	.site-info {
 		background: $greyDark;
+		color:white;
 	}
 }
 
