--- a/themes/gymfinity/styles/modules/_variables.scss
+++ b/themes/gymfinity/styles/modules/_variables.scss
@@ -17,7 +17,9 @@ $sans             : 'Open Sans', Helvetica, Arial, sans-serif;
    $secondary-color  : #efefef;
    $redDark			 : #b5121b;
    $greyDark		 : #424242;
-$font-color       : #646464;
+   $greyMedium		 : #8d8d8d;
+   $greyLight		 : #d5d5d5;
+   $font-color       : #646464;
 // $light-font-color : lighten( $font-color, 40% );
 // $link-color       : $primary-color;
 // $link-focus       : darken($link-color, 10%);
