update app bar font size and padding

--- a/themes/gymfinity/styles/modules/_appbar.scss
+++ b/themes/gymfinity/styles/modules/_appbar.scss
@@ -19,7 +19,8 @@
 		width: 32%;
 	    display: inline-block;
 	    text-align: center;
-	    font-size: 40px;
+	    font-size: 30px;
+	    padding: 6px 0;
 
 	    &:active{
 	    	color:$primary-color;
