--- a/themes/gymfinity/styles/public.scss
+++ b/themes/gymfinity/styles/public.scss
@@ -83,4 +83,30 @@ address.inline {
 	}
 }
 
+.off-canvas-menu {
+	padding: 0;
+	@include flexbox('column');
+	.off-canvas-wrapper {
+		flex: 1;
+		background-position: center center;
+		background-size: cover;
+	}
+	.menu {
+		a, a:link {
+			background: rgba( #000, .45 );
+			border-bottom: 1px solid rgba( #000, 1 );
+			border-top: 1px solid rgba( #fff, .15 );
+		}
+		ul {
+			li {
+				a, a:link {
+					background: rgba( #000, .65 );
+					border-bottom: 1px solid black;
+					margin-bottom: 10px;
+				}
+			}
+		}
+	}
+}
+
 
