--- a/themes/gymfinity/styles/modules/_variables.scss
+++ b/themes/gymfinity/styles/modules/_variables.scss
@@ -24,7 +24,7 @@ $sans             : 'Open Sans', Helvetica, Arial, sans-serif;
 // $link-color       : $primary-color;
 // $link-focus       : darken($link-color, 10%);
 // $link-hover       : $link-focus;
-// $border-color     : lighten( $font-color, 75% );
+$border-color     : lighten( $font-color, 50% );
 // $facebook-color   : #3b5998;
 // $twitter-color    : #55acee;
 // $googleplus-color : #dd4b39;
