--- a/themes/gymfinity/styles/modules/_sidebar.scss
+++ b/themes/gymfinity/styles/modules/_sidebar.scss
@@ -7,7 +7,7 @@
     ul a:focus,
     ul a:link:hover,
     ul a:link:focus {
-        background-color: white;
+        background-color: white !important;
         box-shadow: 0 4px 5px -2px rgba(0, 0, 0, 0.59);
         border-top: 1px solid rgba(235, 233, 233, 0.69);
         padding: 0.778em 0.809em; 
