--- a/wp-content/themes/gymfinity/styles/modules/_content.scss
+++ b/wp-content/themes/gymfinity/styles/modules/_content.scss
@@ -329,9 +329,9 @@ a.button.product_type_simple.add_to_cart_button.ajax_add_to_cart {
 // }
 
 .woocommerce .products ul, .woocommerce ul.products{
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
+	// display: flex;
+	// flex-direction: row;
+	// flex-wrap: wrap;
 }
 
 .single-product .upsells ul.products li.product{
@@ -341,6 +341,7 @@ a.button.product_type_simple.add_to_cart_button.ajax_add_to_cart {
 	text-align:center;
 	padding-bottom: 48px;
 	position:relative;
+	display: block;
 
 	@include breakpoint ('xs') {
 		width:50%;
