--- a/wp-content/themes/gymfinity/styles/modules/_content.scss
+++ b/wp-content/themes/gymfinity/styles/modules/_content.scss
@@ -507,7 +507,7 @@ aside#sidebar .widget.box-container{
 		display: block;
 	}
 }
-.woocommerce-checkout-review-order-table {
+.woocommerce-checkout-review-order-table, .woocommerce-cart-form__contents {
 	dd, dt {
 		// display: inline-block;
 		// float: none;
